--- a/src/about/index.html
+++ b/src/about/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
 </head>
 <body>
-
+  
   
 </body>
 </html>
